<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="23dp"
    android:paddingEnd="22dp"
    android:paddingTop="25dp"
    android:paddingBottom="50dp"
    android:background="#F1F3F6 "
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/app_name_style" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/panel_style"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="13dp"
        android:paddingEnd="13dp">
        <!--android:baselineAligned="false"-->

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:cursorVisible="false"
            android:ellipsize="none"
            android:focusable="false"
            android:fontFamily="@font/digital_numbers_regular"
            android:hint="@string/eights"
            android:importantForAutofill="no"
            android:inputType="none"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textColor="#373A37"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="clearEditTextOnClick"
                android:text="@string/button_ac"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button3"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="parenthesesOnClick"
                android:text="@string/button_brackets"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button4"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="operatorsOnClick"
                android:text="@string/button_percent"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button5"
                style="@style/blue_button"
                android:layout_weight="1"
                android:onClick="operatorsOnClick"
                android:text="@string/button_divide"
                android:textSize="43sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_7"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button7"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_8"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button8"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_9"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button9"
                style="@style/blue_button"
                android:layout_weight="1"
                android:onClick="operatorsOnClick"
                android:text="@string/button_multiply"
                android:textSize="29sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button14"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_4"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button15"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_5"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button16"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_6"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button17"
                style="@style/blue_button"
                android:layout_weight="1"
                android:onClick="operatorsOnClick"
                android:text="@string/button_minus"
                android:textSize="43sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button18"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_1"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button19"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_2"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button20"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="digitsOnClick"
                android:text="@string/button_3"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button21"
                style="@style/blue_button"
                android:layout_weight="1"
                android:onClick="operatorsOnClick"
                android:text="@string/button_plus"
                android:textSize="32sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button22"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:onClick="digitsOnClick"
                android:text="@string/button_0"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button23"
                style="@style/white_button"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:onClick="dotOnClick"
                android:text="@string/button_comma"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button24"
                style="@style/blue_button"
                android:layout_weight="1"
                android:onClick="equalsOnClick"
                android:text="@string/button_equals"
                android:textSize="29sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>